- CI Pipeline에 Docker 이미지 빌드 단계 추가

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -9,6 +9,7 @@ cache:
 stages:
   - build
   - test
+  - package
 
 maven-build:
   image: maven:3.6.3-openjdk-8
@@ -19,3 +20,16 @@ maven-test:
   image: maven:3.6.3-openjdk-11
   stage: test
   script: "./mvnw test"
+
+docker-build:
+  image: docker:latest
+  stage: package
+  services:
+    - docker:dind
+  before_script:
+    - docker login -u "$CI_REGISTRY_USER" -p "$CI_REGISTRY_PASSWORD" $CI_REGISTRY
+  script:
+    - docker pull $CI_REGISTRY_IMAGE:latest || true
+    - docker build --cache-from $CI_REGISTRY_IMAGE:latest --tag $CI_REGISTRY_IMAGE:$CI_COMMIT_SHA --tag $CI_REGISTRY_IMAGE:latest .
+    - docker push $CI_REGISTRY_IMAGE:$CI_COMMIT_SHA
+    - docker push $CI_REGISTRY_IMAGE:latest
