--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -14,6 +14,7 @@ stages:
 maven-build:
   image: maven:3.6.3-openjdk-8
   stage: build
+  before_script: "chmod +x mvnw"
   script: "./mvnw clean compile"
 
 maven-test:
