--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -20,6 +20,7 @@ maven-build:
 maven-test:
   image: maven:3.6.3-openjdk-11
   stage: test
+  before_script: "chmod +x mvnw"
   script: "./mvnw test"
 
 docker-build:
