--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -27,7 +27,9 @@ docker-build:
   image: docker:latest
   stage: package
   services:
-    - docker:dind
+    - name : docker:dind
+      command:
+      ["--insecure-registry=http://192.168.0.10:5005/"]
   before_script:
     - docker login -u "$CI_REGISTRY_USER" -p "$CI_REGISTRY_PASSWORD" $CI_REGISTRY
   script:
