--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -28,8 +28,7 @@ docker-build:
   stage: package
   services:
     - name : docker:dind
-      command:
-        ["--insecure-registry=http://192.168.0.10:5005/"]
+      entrypoint: ["sh", "-c", "dockerd-entrypoint.sh --insecure-registry=$CI_REGISTRY"]
   before_script:
     - docker login -u "$CI_REGISTRY_USER" -p "$CI_REGISTRY_PASSWORD" $CI_REGISTRY
   script:
