--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,10 +1,18 @@
 variables:
   MAVEN_OPTS: "-Dhttps.protocols=TLSv1.2 -Dmaven.repo.local=$CI_PROJECT_DIR/.m2/repository -Dorg.slf4j.simpleLogger.log.org.apache.maven.cli.transfer.Slf4jMavenTransferListener=WARN -Dorg.slf4j.simpleLogger.showDateTime=true -Djava.awt.headless=true"
   MAVEN_CLI_OPTS: "--batch-mode --errors --fail-at-end --show-version -DinstallAtEnd=true -DdeployAtEnd=true"
+  DOCKER_REGISTRY: $CI_REGISTRY
+  DOCKER_TLS_CERTDIR: ''
+  DOCKER_HOST: tcp://localhost:2375
 
 cache:
   paths:
     - .m2/repository
+
+services:
+  - name : docker:dind
+    entrypoint: ["dockerd-entrypoint.sh"]
+    command: ["--insecure-registry","$CI_REGISTRY"]
 
 stages:
   - build
@@ -26,9 +34,6 @@ maven-test:
 docker-build:
   image: docker:latest
   stage: package
-  services:
-    - name : docker:dind
-      command: ["--insecure-registry","$CI_REGISTRY"]      
   before_script:
     - docker login -u "$CI_REGISTRY_USER" -p "$CI_REGISTRY_PASSWORD" $CI_REGISTRY
   script:
