--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -3,7 +3,7 @@ variables:
   MAVEN_CLI_OPTS: "--batch-mode --errors --fail-at-end --show-version -DinstallAtEnd=true -DdeployAtEnd=true"
   DOCKER_REGISTRY: $CI_REGISTRY
   DOCKER_TLS_CERTDIR: ''
-  DOCKER_HOST: tcp://docker:2375  
+  DOCKER_HOST: tcp://localhost:2375  
 
 cache:
   paths:
@@ -34,8 +34,7 @@ maven-test:
 docker-build:
   image: docker:20.10.16
   stage: package
-  before_script:
-    - docker info
+  before_script:    
     - docker login -u "$TOKEN_USER" -p "$TOKEN_PW" $CI_REGISTRY
   script:
     - docker pull $CI_REGISTRY_IMAGE:latest || true
