--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -35,6 +35,7 @@ docker-build:
   image: docker:20.10.16
   stage: package
   before_script:    
+    - docker info
     - docker login -u $TOKEN_USER -p $TOKEN_PW $CI_REGISTRY
   script:
     - docker pull $CI_REGISTRY_IMAGE:latest || true
