Update .gitlab-ci.yml file

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -3,6 +3,8 @@ variables:
   MAVEN_CLI_OPTS: "--batch-mode --errors --fail-at-end --show-version -DinstallAtEnd=true -DdeployAtEnd=true"
   DOCKER_REGISTRY: $CI_REGISTRY
   DOCKER_TLS_CERTDIR: ''
+  DOCKER_DRIVER: overlay2
+  DOCKER_HOST: tcp://docker:2375 
 #  DOCKER_HOST: tcp://localhost:2375  
 
 cache:
@@ -11,6 +13,7 @@ cache:
 
 services:
   - name : docker:20.10.16-dind
+    alias: docker
     entrypoint: ["dockerd-entrypoint.sh"]
     command: ["--insecure-registry","$CI_REGISTRY"]
 
