--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -23,19 +23,19 @@ stages:
   - package
 
 maven-build:
-  image: maven:3.6.3-openjdk-8
+  image: maven:3.6.3-openjdk-8-slim
   stage: build
   before_script: "chmod +x mvnw"
   script: "./mvnw clean compile"
 
 maven-test:
-  image: maven:3.6.3-openjdk-8
+  image: maven:3.6.3-openjdk-8-slim
   stage: test
   before_script: "chmod +x mvnw"
   script: "./mvnw test"
 
 docker-build:
-  image: docker:20.10.16
+  image: docker:20.10.16-dind
   stage: package  
   script:
     # - docker info
