--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -14,8 +14,7 @@ cache:
 services:
   - name : docker:20.10.16-dind
     alias: docker
-    entrypoint: ["dockerd-entrypoint.sh"]
-    command: ["--insecure-registry","192.168.0.10:5005"]
+    command: ['--insecure-registry','192.168.0.10:5005',]
 
 stages:
   - build
